feat(events): add pagination in get list route
