# events/internal/infra/docs/swagger.json
@@ -23,14 +23,27 @@
                 "produces": [
                     "application/json"
                 ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Page size",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/application.OutputGetEventsDTO"
-                            }
+                            "$ref": "#/definitions/application.OutputGetEventsDTO"
                         }
                     },
                     "500": {
@@ -206,6 +219,38 @@
         }
     },
     "definitions": {
+        "application.EventsOutputDTO": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "currency": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "event_date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "application.InputRegisterEventDTO": {
             "type": "object",
             "properties": {
@@ -241,9 +286,6 @@
                 "event_date": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "image_url": {
                     "type": "string"
                 },
@@ -258,32 +300,14 @@
         "application.OutputGetEventsDTO": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
+                "events": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/application.EventsOutputDTO"
+                    }
                 },
-                "currency": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "event_date": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "image_url": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "number"
-                },
-                "updated_at": {
-                    "type": "string"
+                "pagination": {
+                    "$ref": "#/definitions/pagination.Pagination"
                 }
             }
         },
@@ -316,6 +340,23 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "pagination.Pagination": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                },
+                "totalPages": {
+                    "type": "integer"
                 }
             }
         }
